<resources>
    <string name="app_name">KedaiKopi</string>
    <string name="Username">Username</string>
    <string name="Sign_up">Sign Up</string>
    <string name="login">Login</string>

    <string name="easy_food">EASY FOOD</string>
    <string name="sign_Up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="higienis_delicious_affordable_price">Higienis, Delicious, Affordable price</string>
    <string name="order_here">Order Here</string>
    <string name="Search_for_your_food">Search for your food</string>
    <string name="Spaghetti">Spaghetti</string>
    <string name="Rp_50_000_00">Rp 50.000,00</string>
    <string name="one_pack_contains">One Pack Contains :</string>
    <string name="italian_spaghetti_is_made_from_durum_wheat_semolina_but_elsewhere_it_can_be_made_with_other_types_of_flour">Italian spaghetti is made from durum wheat semolina, but elsewhere it can be made with other types of flour.</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="Pizza">Pizza</string>
    <string name="On_pizza_usually_meat_and_sauces_such_as_salami_and_pepperoni_olives_vegetables_such_as_chilies_and_peppers_and_others">on pizza, usually meat and sauces, such as salami and pepperoni, olives, vegetables such as chilies and peppers and others.</string>
    <string name="Burger">Burger</string>
    <string name="on_pizza_usually_meat_and_sauces_such_as_salami_and_pepperoni_olives_vegetables_such_as_chilies_and_peppers_and_others">on pizza, usually meat and sauces, such as salami and pepperoni, olives, vegetables such as chilies and peppers and others.</string>
    <string name="french_fries">French Fries</string>
    <string name="french_fries_can_be_eaten_as_a_snack_or_as_a_side_dish_to_the_main_course">French fries can be eaten as a snack, or as a side dish to the main course</string>
    <string name="Coffe">Coffe</string>
    <string name="a_drink_brewed_from_coffee_beans_that_have_been_roasted_and_mashed_into_powder">a drink brewed from coffee beans that have been roasted and mashed into powder</string>
    <string name="Juice">Juice</string>
    <string name="fruit_ice">Fruit Ice</string>
    <string name="Mineral_water">Mineral Water</string>
    <string name="My_order">My Order</string>
    <string name="burger">Burger</string>
    <string name="rP_50_000_00">Rp 50.000,00</string>
    <string name="checkout">Checkout</string>
    <string name="rp_50_000_00">Rp 50.000,00</string>
    <string name="pizza">Pizza</string>
    <string name="spaghetti">Spaghetti</string>
    <string name="french">French</string>
    <string name="coffe">Coffe</string>
    <string name="fruite_ice">Fruite Ice</string>
    <string name="juice">Juice</string>
    <string name="mineral_water">Mineral Water</string>
    <string name="back_to_home">Back to Home</string>
    <string name="add_order">Add Order</string>
    <string name="thanks_for_order">Thanks for Order</string>
    <string name="search_for_your_food">Search for your food</string>
    <string name="my_order">My Order</string>
    <string name="search_for_your_drink">Search for your Drink</string>
</resources>